UI-3231  [Answers] Alignment Bugs on some screens

--- a/platform-ui-web-eXoResources/src/main/webapp/skin/less/ProgressBars/Style.less
+++ b/platform-ui-web-eXoResources/src/main/webapp/skin/less/ProgressBars/Style.less
@@ -58,9 +58,10 @@
 	   display: inline-block;
 		margin-left: 5px;
 		color: @grayLight;
+		margin-bottom: 0;
+		vertical-align: middle;
 	}
 }
-
 .uiPopup {
 	.controls-full{
 		.uploadButton {
